# eduloot

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  tokensSystem.txt
src/: CMakeLists.txt  Parent.cpp  Parent.h  Teacher.cpp  Teacher.h  User.cpp  User.h  admin.cpp  adminMain.cpp  adminMain.h  admin_bank.cpp  admin_emergencyFunds.cpp  admin_helpers.cpp  admin_helpers.h  admin_manageAccounts.cpp  admin_merchantRequests.cpp  admin_notifications.cpp  admin_quests.cpp  admin_transactions.cpp  approvedQuests.txt  approvedReq.txt  cashout.txt  login.cpp  main.cpp  merchant.cpp  merchantAccounts.txt  merchantBalance.txt  merchantMain.cpp  merchant_helpers.h  merchant_products.cpp  merchant_request.cpp  merchant_sales.cpp  parentAccounts.txt  parentBalance.txt  parentTokenTransactions.txt  productList.txt  productReq.txt  product_helpers.h  quest_helpers.h  quests.txt  (+22 more)
src/admin/: adminMain.cpp  admin_functions.h  admin_helpers.h  admin_includes.h  admin_structs.h  manageAccounts.cpp
src/admin/core/: adminMain.cpp  adminMain.h  admin_helpers.cpp
src/admin/files/: approvedQuests.txt  approvedReq.txt  moneySystem.txt  studentApprovedReqs.txt  tokensSystem.txt
src/admin/includes/: admin_helpers.h  admin_includes.h
src/admin/modules/: admin_bank.cpp  admin_bank.h  admin_emergencyFunds.cpp  admin_emergencyFunds.h  admin_manageAccounts.cpp  admin_manageAccounts.h  admin_merchantRequests.cpp  admin_merchantRequests.h  admin_notifications.cpp  admin_notifications.h  admin_quests.cpp  admin_quests.h  admin_transactions.cpp  (+1 more)
src/termcolor/: termcolor.hpp
(+47 files in other folders)
